--- a/casa.html
+++ b/casa.html
@@ -22,8 +22,8 @@
             	<a href="index.html" class="topbar-link"><i class="topbar-icon fa fa-home"></i></a>
             </div>
     		<div class="topbar-wrapper-2">
-            	<a href="#" class="topbar-link"><i class="topbar-icon fa fa-instagram"></i></a>
-                <a href="#" class="topbar-link"><i class="topbar-icon fa fa-facebook-f"></i></a>
+            	<a href="https://www.instagram.com/cannelleubatuba/?hl=pt-br" class="topbar-link" target="_blank"><i class="topbar-icon fa fa-instagram"></i></a>
+                <a href="https://www.facebook.com/migilaberte/" class="topbar-link" target="_blank"><i class="topbar-icon fa fa-facebook-f"></i></a>
             </div>
     	</div><!-- topbar -->
         <div class="logo-container">
@@ -155,6 +155,9 @@
             <p class="address">Av. Guarani, 240, Itaguá - <br class="line-break-mobile">Ubatuba - SP<br>(12) 3833-8921 / (12) 99634-1890</p>
         </div>
     </footer>
+    <div class="credit-wrapper">
+        <small class="credit">Desenvolvido por <a class="credit-link" href="http://fernandoted.com.br" target="_blank">Fernando Ted</a></small>
+    </div>
 
 	<script src="dist/js/jquery.min.js"></script>
     <script src="dist/js/bootstrap.min.js"></script>
