--- a/caseirinho.html
+++ b/caseirinho.html
@@ -32,8 +32,8 @@
             	<a href="index.html" class="topbar-link"><i class="topbar-icon fa fa-home"></i></a>
             </div>
     		<div class="topbar-wrapper-2">
-            	<a href="#" class="topbar-link"><i class="topbar-icon fa fa-instagram"></i></a>
-                <a href="#" class="topbar-link"><i class="topbar-icon fa fa-facebook-f"></i></a>
+            	<a href="https://www.instagram.com/cannellecaseirinho/?hl=pt-br" class="topbar-link" target="_blank"><i class="topbar-icon fa fa-instagram"></i></a>
+                <a href="https://www.facebook.com/migilaberte/" target="_blank" class="topbar-link"><i class="topbar-icon fa fa-facebook-f"></i></a>
             </div>
     	</div><!-- topbar -->
         <div class="logo-container">
@@ -367,7 +367,7 @@
                 	</div>
                     <div class="store-wrapper">
                 		<h4 class="subtitle">- Loja Campiolo -</h4>
-                        <p class="store-info">Rua Manoel Caltabiano, 50, Vila Molica - Guaratinguetá - SP</p>
+                        <p class="store-info">Rua Manoel Caltabiano, 50, Vila Molica - Guaratinguetá - SP<br>(12) 3122-4599</p>
                 	</div>
                 </div> <!-- store-container -->
         	</div> <!-- store-text-wrapper -->
@@ -393,6 +393,9 @@
             <p class="address">Av. Guarani, 240, Itaguá - <br class="line-break-mobile">Ubatuba - SP<br>(12) 3833-8921 / (12) 996341890</p>
         </div>
     </footer>
+    <div class="credit-wrapper">
+        <small class="credit">Desenvolvido por <a class="credit-link" href="http://fernandoted.com.br" target="_blank">Fernando Ted</a></small>
+    </div>
 
 	<script src="dist/js/jquery.min.js"></script>
     <script src="dist/js/bootstrap.min.js"></script>
