--- a/onde-estamos.html
+++ b/onde-estamos.html
@@ -22,8 +22,8 @@
             	<a href="index.html" class="topbar-link"><i class="topbar-icon fa fa-home"></i></a>
             </div>
     		<div class="topbar-wrapper-2">
-            	<a href="#" class="topbar-link"><i class="topbar-icon fa fa-instagram"></i></a>
-                <a href="#" class="topbar-link"><i class="topbar-icon fa fa-facebook-f"></i></a>
+            	<a href="https://www.instagram.com/cannelleubatuba/?hl=pt-br" class="topbar-link" target="_blank"><i class="topbar-icon fa fa-instagram"></i></a>
+                <a href="https://www.facebook.com/migilaberte/" class="topbar-link" target="_blank"><i class="topbar-icon fa fa-facebook-f"></i></a>
             </div>
     	</div><!-- topbar -->
         <div class="logo-container">
@@ -47,8 +47,8 @@
 
             <p class="paragraph">Estamos localizados na charmosa rua Guarani, no bairro do Itaguá, região central de Ubatuba.<br><br>
             Entre em contato através do nosso e-mail cannelleubatuba@gmail.com, ou pelos telefones 12 3833-8921 / 12 99634-1890, e não deixe de nos acompanhar nas redes sociais:<br><br>
-            facebook: <a href="#">cannelle</a><br>
-            instagram: <a href="#">cannelleubatuba</a></p>
+            facebook: <a href="https://www.facebook.com/migilaberte/" target="_blank">cannelle</a><br>
+            instagram: <a href="https://www.instagram.com/cannelleubatuba/?hl=pt-br" target="_blank">cannelleubatuba</a></p>
 
             <!--<p class="paragraph">instagram: <a href="#">cannelleubatuba</a></p>-->
             
@@ -85,6 +85,9 @@
             <p class="address">Av. Guarani, 240, Itaguá - <br class="line-break-mobile">Ubatuba - SP<br>(12) 3833-8921 / (12) 996341890</p>
         </div>
     </footer>
+    <div class="credit-wrapper">
+        <small class="credit">Desenvolvido por <a class="credit-link" href="http://fernandoted.com.br" target="_blank">Fernando Ted</a></small>
+    </div>
 
 	<script src="dist/js/jquery.min.js"></script>
     <script src="dist/js/bootstrap.min.js"></script>
