--- a/cozinha-caicara.html
+++ b/cozinha-caicara.html
@@ -22,8 +22,8 @@
             	<a href="index.html" class="topbar-link"><i class="topbar-icon fa fa-home"></i></a>
             </div>
     		<div class="topbar-wrapper-2">
-            	<a href="#" class="topbar-link"><i class="topbar-icon fa fa-instagram"></i></a>
-                <a href="#" class="topbar-link"><i class="topbar-icon fa fa-facebook-f"></i></a>
+            	<a href="https://www.instagram.com/cannelleubatuba/?hl=pt-br" class="topbar-link" target="_blank"><i class="topbar-icon fa fa-instagram"></i></a>
+                <a href="https://www.facebook.com/migilaberte/" class="topbar-link" target="_blank"><i class="topbar-icon fa fa-facebook-f"></i></a>
             </div>
     	</div><!-- topbar -->
         <div class="logo-container">
@@ -51,7 +51,10 @@
                 </div>
             </div>
             <div class="paragraph-wrapper">
-                <h1 class="title" style="color: #FFFFFF; text-align: center;">cozinha artesanal, alma caiçara</h1>
+                <div class="message-wrapper">
+                    <h4 class="subtitle message">Estamos realizando a reestruturação da nossa proposta e adequando o espaço. Voltaremos a recebe-los em breve.</h4>
+                </div>
+                <h1 class="title" style="color: #FFFFFF; text-align: center; padding-bottom: 60px;">cozinha artesanal, alma caiçara</h1>
             </div>
             <div class="mold-row">
                 <div class="top-corner-wrapper">
@@ -72,7 +75,7 @@
             </div>
         </div>
         
-        <div id="carousel-about" class="carousel slide" data-ride="carousel">
+        <!--<div id="carousel-about" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner carousel-container" role="listbox">
                 <div class="carousel-item active">
                     <img class="d-block slide-img" src="dist/img/slide-about-16.jpg" alt="primeiro slide">
@@ -92,7 +95,7 @@
                 <div class="carousel-item">
                     <img class="d-block slide-img" src="dist/img/slide-about-25-1.jpg" alt="terceiro slide">
                 </div>
-            </div> <!-- carousel-inner -->
+            </div> <!-- carousel-inner --><!--
             <a class="carousel-control-prev" href="#carousel-about" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
@@ -101,7 +104,47 @@
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
             </a>
-        </div> <!-- carousel-about -->
+        </div>  carousel-about -->
+
+        <!-- carousel test -->
+        <div class="carousel-casa-container">
+            <div id="carousel-casa" class="carousel slide" data-ride="carousel">
+                <!--<ol class="indicators">
+                    <li data-target="#carousel-casa" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel-casa" data-slide-to="1"></li>
+                    <li data-target="#carousel-casa" data-slide-to="2"></li>
+                </ol>-->
+                <div class="carousel-inner carousel-casa-image-wrapper" role="listbox">
+                    <div class="carousel-item active">
+                      <img class="d-block img-fluid casa-slide" src="dist/img/slide-about-16.jpg" alt="primeiro slide">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block img-fluid casa-slide" src="dist/img/slide-about-02.jpg" alt="segundo slide">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block img-fluid casa-slide" src="dist/img/slide-about-21.jpg" alt="terceiro slide">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block img-fluid casa-slide" src="dist/img/slide-about-13-1.jpg" alt="terceiro slide">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block img-fluid casa-slide" src="dist/img/slide-about-14-1.jpg" alt="terceiro slide">
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block img-fluid casa-slide" src="dist/img/slide-about-25-1.jpg" alt="terceiro slide">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carousel-casa" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carousel-casa" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div> <!-- casa carousel -->
+        </div> <!-- carousel-casa-container -->
+
         <div class="white-container">
             <h2 class="subtitle">A Chef</h2>
             <p class="paragraph">Michele é formada em nutrição pela Universidade Federal Fluminense (UFF) e mestre em saúde pública pela Universidade Federal do Rio de Janeiro (UFRJ), migrou da cidade do Rio para Ubatuba no ano de 2010 em busca de qualidade de vida e se apaixonou pela cultura local. Em 2012 montou junto com sua Sócia, Vanessa Campiolo, o Cannelle, onde vem desenvolvendo uma proposta gastronômica de valorização da produção local e artesanal, ajudando assim a difundir a cultura caiçara.</p>
@@ -132,6 +175,9 @@
             <p class="address">Av. Guarani, 240, Itaguá - <br class="line-break-mobile">Ubatuba - SP<br>(12) 3833-8921 / (12) 996341890</p>
         </div>
     </footer>
+    <div class="credit-wrapper">
+        <small class="credit">Desenvolvido por <a class="credit-link" href="http://fernandoted.com.br" target="_blank">Fernando Ted</a></small>
+    </div>
 
 	<script src="dist/js/jquery.min.js"></script>
     <script src="dist/js/bootstrap.min.js"></script>
